# linker

./: .pre-commit-config.yaml  Cargo.toml  README.md  resource.toml
.github/workflows/: ci.yaml  committed.yml  pre-commit.yml  spelling.yml  test.yaml
src/: config.rs  main.rs  resource.rs  utils.rs
