[package]
name = "linker"
version = "0.1.0"
edition = "2021"
authors = ["PuQing <me@puqing.work>"]
description = "Manage deep learning training resources"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
crossterm = "0.27.0"
dirs = "5.0.1"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
