[package]
name = "linker"
version = "0.1.1"
edition = "2021"
authors = ["PuQing <me@puqing.work>"]
description = "Manage deep learning training resources"
license = "MIT"
categories = ["development-tools", "cli", "deep-learning"]
keywords = ["deep-learning", "cli", "development-tools"]
repository = "https://github.com/AndPuQing/linker"
readme = "README.md"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
crossterm = "0.27.0"
dirs = "5.0.1"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]
